# agentrt

./: .clang-format  .clangd  .editorconfig  .env.example  .gitignore  .gitmodules  .jscpd.json  .lizardrc  .lsan-suppressions  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  AUTHORS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  README_zh.md  SECURITY.md  SUPPORT.md  contracts  fix_throttle.py  pyproject.toml  vcpkg.json
agentos/: .clang-format  CMakeLists.txt  README.md
agentos/atoms/: CMakeLists.txt  README.md
agentos/atoms/corekern/: CMakeLists.txt  README.md
agentos/atoms/coreloopthree/: CMakeLists.txt  README.md
agentos/atoms/frameworks/: CMakeLists.txt  README.md
agentos/atoms/memory/: CMakeLists.txt  README.md  builtin_index.c  builtin_provider.c  builtin_retrieval.c  builtin_storage.c  memory_provider.h
agentos/atoms/memoryrovol/: CMakeLists.txt  README.md  agentos_mr_force_includes.h
agentos/atoms/syscall/: CMakeLists.txt  README.md
agentos/atoms/taskflow/: CMakeLists.txt  README.md
agentos/cmake/: windows_preinclude.h
agentos/commons/: CMakeLists.txt  README.md
agentos/commons/include/: agentos_types.h
agentos/commons/platform/: README.md  platform.c
agentos/commons/tests/: CMakeLists.txt  README.md
agentos/cupolas/: CMakeLists.txt  Doxyfile  README.md  generate_api_docs.bat  generate_api_docs.sh
agentos/cupolas/docs/: DOXYGEN_GUIDE.md
agentos/cupolas/include/: cupolas.h  dynamic_policy_engine.h  safety_guard.h  zero_trust_integration.h
agentos/cupolas/src/: circuit_breaker.c  circuit_breaker.h  cupolas.c  cupolas_config.c  cupolas_config.h  cupolas_metrics.c  cupolas_metrics.h  cupolas_monitoring.c  cupolas_monitoring.h  mainpage.dox  mempool.c  mempool.h  slab.c  slab.h  yaml_minimal.c  yaml_minimal.h
agentos/cupolas/tests/: test_protection_chain.c
agentos/daemon/: CMakeLists.txt  Dockerfile.ci  README.md
agentos/daemon/channel_d/: CMakeLists.txt  README.md
agentos/daemon/common/: CMakeLists.txt  README.md
agentos/daemon/examples/: README.md  example_svc_usage.c
agentos/daemon/gateway_d/: CMakeLists.txt  README.md
agentos/daemon/hook_d/: CMakeLists.txt
agentos/daemon/info_d/: CMakeLists.txt  README.md
agentos/daemon/llm_d/: CMakeLists.txt  README.md
agentos/daemon/market_d/: CMakeLists.txt  README.md
agentos/daemon/monit_d/: CMakeLists.txt  README.md
agentos/daemon/notify_d/: CMakeLists.txt  README.md
agentos/daemon/observe_d/: CMakeLists.txt  README.md
agentos/daemon/plugin_d/: CMakeLists.txt
agentos/daemon/sched_d/: CMakeLists.txt  README.md
agentos/daemon/scripts/: README.md  ci.sh  local-ci.sh  verify-coverage.sh
agentos/daemon/tool_d/: CMakeLists.txt  README.md
agentos/gateway/: CMakeLists.txt  README.md
agentos/gateway/config/: README.md
agentos/gateway/deploy/: README.md
agentos/gateway/docker/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
agentos/gateway/include/: gateway.h  gateway_protocol_bridge.h
agentos/gateway/tests/: CMakeLists.txt  gateway_benchmark.c  test_gateway.c  test_gateway_rpc_handler.c  test_jsonrpc.c  test_syscall_router.c
agentos/heapstore/: .gitignore  CMakeLists.txt  README.md
agentos/heapstore/examples/: CMakeLists.txt  README.md  batch_write.c  quick_start.c
agentos/heapstore/include/: heapstore.h  heapstore_batch.h  heapstore_integration.h  heapstore_ipc.h  heapstore_log.h  heapstore_memory.h  heapstore_migration.h  heapstore_registry.h  heapstore_token.h  heapstore_trace.h  heapstore_types.h  utils.h
agentos/heapstore/kernel/: README.md
agentos/heapstore/migrations/: V001_initial_schema.sql  V002_rollback.sql
agentos/heapstore/scripts/: README.md  performance_regression_detector.py
agentos/heapstore/services/: README.md
agentos/heapstore/src/: heapstore_batch.c  heapstore_core.c  heapstore_integration.c  heapstore_ipc.c  heapstore_log.c  heapstore_memory.c  heapstore_migration.c  heapstore_registry.c  heapstore_token.c  heapstore_trace.c  private.h  utils.c
agentos/heapstore/tests/: CMakeLists.txt  benchmark_heapstore.c  test_batch_performance.c  test_edge_cases.c  test_fuzzing_concurrency.c  test_heapstore_batch.c  test_heapstore_core.c  test_heapstore_integration.c  test_heapstore_ipc.c  test_heapstore_log.c  test_heapstore_memory.c  test_heapstore_registry.c  test_heapstore_trace.c  test_security_path_traversal.c
agentos/manager/: .gitignore  DEVELOPMENT_GUIDE.md  README.md  manager_management.yaml  otel-collector-manager.yaml
agentos/manager/agent/: README.md
agentos/manager/audit/: README.md
agentos/openlab/: Dockerfile  README.md
agentos/protocols/: CMakeLists.txt  README.md
agentos/toolkit/: README.md
agentrt/: CMakeLists.txt  README.md
agentrt/atoms/: CMakeLists.txt  README.md
agentrt/commons/: CMakeLists.txt  README.md
agentrt/cupolas/: CMakeLists.txt  README.md
agentrt/daemons/: CMakeLists.txt  Dockerfile.ci  README.md
agentrt/gateway/: CMakeLists.txt  README.md
agentrt/heapstore/: .gitignore  CMakeLists.txt  README.md
agentrt/protocols/: CMakeLists.txt  README.md
ecosystem/openlab/: Dockerfile  README.md  pyproject.toml
sdk/cli/: Cargo.toml  README.md
sdk/python/: README.md  pyproject.toml  requirements.txt  restructure_sdk.py  setup.py
sdk/rust/: Cargo.toml  README.md
sdk/tui/: Cargo.toml  README.md
tests/: CMakeLists.txt  README.md  __init__.py  codecov.yml  conftest.py  test_banned_functions.c
tests/benchmarks/: CMakeLists.txt  README.md  __init__.py  test_performance_benchmarks.c
tests/contract/: README.md  __init__.py
tests/fixtures/: README.md
tests/integration/: CMakeLists.txt  README.md  __init__.py  test_e2e_core.c  test_protocol_compatibility.py
tests/platform/: CMakeLists.txt  README.md  test_mkdir_recursive.c  test_platform_compat.c
tests/security/: CMakeLists.txt  README.md  __init__.py  test_sec017_compliance.c  test_security_audit.c
tests/templates/: README.md
tests/unit/: CMakeLists.txt  README.md  __init__.py
tests/utils/: README.md  __init__.py
(+2997 files in other folders)
